# models/Transaction.js
@@ -1,14 +1,16 @@
-const mongoose = require('mongoose');
+const mongoose = require('mongoose')
 
 module.exports = mongoose.model('Transaction', mongoose.Schema({
 
-    accountFrom: {type: String, required: true, minlength: 4},
-    accountTo: {type: String, required: true, minlength: 4},
-    amount: {type: Number, required: true, min: 0.01},
-    currency: {type: String, required: true, minlength: 3},
+    userId: {type: mongoose.Schema.Types.ObjectId, ref: "User"},
+    accountFrom:{type: String, required: true, minlength: 4},
+    accountTo:{type: String, required: true, minlength: 4},
+    amount:{type: Number, required: true, min:0.01},
+    currency:{type: String, required: true, minlength: 3},
     createdAt: {type: Date, required: true, default: Date.now},
-    explanation: {type: String, required: true, minlength: 1},
-    senderName: {type: String, required: true},
+    explanation:{type: String, required: true, minlength: 1},
+    senderName: {type: String},
+    receiverName: {type: String},
     status: {type: String, required: true, default: 'Pending'},
     statusDetail: {type: String}
 
@@ -21,4 +23,3 @@ module.exports = mongoose.model('Transaction', mongoose.Schema({
         }
     }
 }))
-
