# routes/transactions.js
@@ -3,7 +3,12 @@ const User = require("../models/User")
 const Account = require("../models/Account")
 const Bank = require("../models/Bank")
 const Transaction = require("../models/Transaction")
-const {verifyToken, refreshListOfBanksFromCentralBank} = require("../middlewares");
+const base64url = require('base64url');
+const jose = require("node-jose");
+const fs = require("fs");
+const axios = require('axios');
+const {verifyToken, refreshListOfBanksFromCentralBank, sendGetRequest} = require("../middlewares");
+
 
 
 function debitFromAccount(accountFrom, amount) {
@@ -17,16 +22,13 @@ router.post('/', verifyToken, async function (req, res) {
 
         let statusDetail;
 
+        const accountTo = await Account.findOne({number: req.body.accountTo})
+
         // 404 accountFrom not found
-        const accountFrom = await Account.findOne({number: req.body.accountFrom})
+        const accountFrom = await Account.findOne({number: req.body.accountFrom, userId: req.userId})
 
         if (!accountFrom) {
             return res.status(404).send({error: "account From not found"})
-        }
-
-        // 403 From account is not yours
-        if (accountFrom.userId.toString() === req.userId.toString()) {
-            return res.status(403).send({error: "Not your account"})
         }
 
 
@@ -66,11 +68,7 @@ router.post('/', verifyToken, async function (req, res) {
             console.log('Bank was cached')
         }
 
-
-
-
-
-        await new Transaction({
+        const transaction = await new Transaction({
             userId: req.userId,
             amount: req.body.amount,
             currency: accountFrom.currency,
@@ -90,7 +88,6 @@ router.post('/', verifyToken, async function (req, res) {
 
     } catch (e) {
 
-
         // 400 Invalid amount
         if (/.*Cast to Number failed for value .*amount/.test(e.message)
             || /Transaction validation failed: amount.*/.test(e.message)) {
@@ -104,18 +101,114 @@ router.post('/', verifyToken, async function (req, res) {
         }
 
         // 500 Don't know what happened - internal server error
-        console.log(e)
+        console.log(e.message)
         return res.status(500).send({error: e.message})
 
     }
 
 })
 
-router.post('/b2b', verifyToken, async function (req, res) {
+router.get('/jwks', async function (req, res) {
 
-    res.send({receiverName: "Jaan Tamm"})
+    // Create new keystore
+    const keystore = jose.JWK.createKeyStore();
+
+    // Add our private key from file to the keystore
+    await keystore.add(fs.readFileSync('./private.key').toString(), 'pem')
+
+    // Return our keystore (only the public key derived from the imported private key) in JWKS (JSON Web Key Set) format
+    console.log('/jwks: Exporting keystore and returning it')
+    return res.send(keystore.toJSON())
 
 })
 
-module.exports = router
+router.post('/b2b', async function (req, res) {
 
+    try {
+        const components = req.body.jwt.split('.')
+
+        const payload = JSON.parse(base64url.decode(components[1]))
+
+
+        const accountTo = await Account.findOne({number: payload.accountTo})
+
+        if (!accountTo) {
+            return res.status(404).send({error: 'Account not found'})
+        }
+
+        const accountFromBankPrefix = payload.accountFrom.substring(0, 3)
+
+        const accountFromBank = await Bank.findOne({bankPrefix: accountFromBankPrefix})
+        if (!accountFromBank) {
+            const result = await refreshListOfBanksFromCentralBank();
+            if (typeof result.error !== 'undefined') {
+                return res.status(502).send({error: "There was an error communication with Central Bank" + result.error});
+            }
+            const accountFromBank = await Bank.findOne({bankPrefix: accountFromBankPrefix})
+
+            if (!accountFromBank) {
+                return res.status(404).send({error: 'Bank ' + accountFromBankPrefix + ' was not found in Central Bank'})
+            }
+        }
+
+
+        // Validate signature
+
+        //  const jwks = await sendGetRequest(accountFromBank.jwksUrl)
+
+        // const keystore = jose.JWK.asKeyStore(jwks)
+        // try {
+        //     await jose.JWKS.createVerify(keystore).verify(req.body.jwt)
+        // } catch (e) {
+        //     return res.status(400).send({error: 'Invalid signature'})
+        // }
+
+        let amount = payload.amount
+        if (accountTo.currency !== payload.currency) {
+            const rate = await getRates(payload.currency, accountTo.currency)
+            amount = (parseInt(amount) * parseFloat(rate)).toFixed(0)
+        }
+
+        const accountToOwner = await User.findOne({_id: accountTo.userId})
+        accountTo.balance += amount
+        accountTo.save();
+
+        await Transaction.create({
+            userId: accountToOwner._id,
+            accountFrom:payload.accountFrom ,
+            accountTo:payload.accountTo ,
+            amount:payload.amount ,
+            currency:payload.currency ,
+            createdAt:payload.createdAt ,
+            explanation:payload.explanation ,
+            senderName:payload.senderName ,
+            receiverName:accountToOwner.name ,
+            status:'Completed'
+        })
+
+
+        res.send({receiverName: accountToOwner.name})
+    } catch (e) {
+        return res.status(500).send({error: e.message})
+    }
+})
+
+async  function getRates(from,to) {
+    const response = await axios.get('https://api.exchangerate.host/latest?base='+from)
+    console.log(`Converting ${from} to ${to}`)
+    for (const rate in response.data.rates) {
+        if (rate === to) {
+            console.log(`Rate is: ${response.data.rates[rate]}`)
+            return response.data.rates[rate]
+        }
+    }
+}
+router.get('/', verifyToken, async (req, res, next) => {
+
+    // Get user's transactions
+    const transactions = await transactionModel.find({userId: req.userId})
+
+    // return them
+    res.status(200).json(transactions)
+})
+module.exports = router
